# v0

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.org  bash  build.gradle.kts  build.sh  kls_database.db  main.c  mapping.kt  settings.gradle.kts  test.c
.cache/clangd/index/: AAudioExtensions.h.DBFFDFCACDB37AD8.idx  AAudioLoader.cpp.9DD5A81625F45611.idx  AAudioLoader.h.98F68CE07B916730.idx  AdpfWrapper.cpp.7AC05EF3B2D7FDC1.idx  AdpfWrapper.h.4D1934FA4B1BC645.idx  AudioClock.h.B2E856F507B9E094.idx  AudioInputStreamOpenSLES.cpp.C8EE0A5C9D5206D2.idx  AudioInputStreamOpenSLES.h.895550421249F182.idx  AudioOutputStreamOpenSLES.cpp.E067183A134A98E5.idx  AudioOutputStreamOpenSLES.h.B781975B214F60B6.idx  AudioSourceCaller.cpp.354F77E7314BCA98.idx  AudioSourceCaller.h.3C7AF636A7B666A3.idx  AudioStream.cpp.AF8FF2F950BDE514.idx  AudioStream.h.0D99F09368CC8733.idx  AudioStreamAAudio.cpp.8DEAC974A9E484DD.idx  AudioStreamAAudio.h.BF5F621EE44679C6.idx  AudioStreamBase.h.67CFD1DE687A7C43.idx  AudioStreamBuffered.cpp.21F9DAF3DD01236A.idx  AudioStreamBuffered.h.191BFEBEC01AF2BA.idx  AudioStreamBuilder.cpp.87AEE14AC8D980C5.idx  AudioStreamBuilder.h.DB1E34A8507C4AE9.idx  AudioStreamCallback.h.003E219334D5E485.idx  AudioStreamOpenSLES.cpp.87C2068964ABDDEC.idx  AudioStreamOpenSLES.h.AEC748B4EE4BB673.idx  ChannelCountConverter.cpp.F915B4E4AFF471BD.idx  (+188 more)
.github/: BUG_REFERENCE_GUIDE.md  code_walkthrough.md  glow_analysis.md  wicki_hayden_analysis.md  wicki_hayden_visual.md
.github/workflows/: build.yml
assets/: theme.yaml
src/main/: AndroidManifest.xml
(+56 files in other folders)
